# scrutin-analysis

./: Cargo.toml  README.md
rules/: AllRules.json  AutoFixPatterns.json  CodeAnalysisRules.json  DetectionPatterns.json  LanguagePrompts.json
src/: auto_fix.rs  chunker.rs  detect.rs  diff_parser.rs  engine.rs  error.rs  iac_engine.rs  lib.rs  models.rs  rules.rs
src/metrics/: complexity.rs  duplication.rs  engine.rs  halstead.rs  loc.rs  mod.rs  models.rs
src/metrics/languages/: cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_parser.rs  typescript.rs
src/secret/: allowlist.rs  engine.rs  entropy.rs  mask.rs  mod.rs  parser.rs  patterns.rs
