[package]
name = "scrutin-analysis"
version = "0.1.0"
edition = "2021"
description = "Static code analysis engine — 900+ rules, 10+ languages. Powers Scrutin."
license = "MIT"
repository = "https://github.com/codigocentral/scrutin-analysis"
keywords = ["static-analysis", "linter", "security", "code-quality", "sast"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.20"
thiserror = "1.0"
walkdir = "2.5"
ignore = "0.4"
glob = "0.3"
tracing = "0.1"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
